--- a/week2/csstest.html
+++ b/week2/csstest.html
@@ -13,7 +13,7 @@
             font-size: 50px;
             border: 2px solid black;
             border-radius: 25px;
-            padding: 20px;
+            padding: 10px;
         }
 
         p {
@@ -29,7 +29,7 @@
             text-decoration: wavy underline;
             border: 5px solid black;
             border-radius: 100px;
-            margin: 20px;
+            margin: 50px;
         }
 
         a.B {
@@ -37,8 +37,8 @@
             font-size: 100px;
             font-weight: 900;
             border: 2px solid rgb(231, 239, 4);
-            border-radius: 100px;
-            padding: 20px 8px;
+            border-radius: px;
+            padding: 20px;
             ;
         }
     </style>
