feat: add new link

--- a/week2/button.html
+++ b/week2/button.html
@@ -13,12 +13,33 @@
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
         }
+
+        a.signup {
+            color: white;
+            background-color: #55a25a;
+            text-decoration: none;
+            border: 10px solid #55a25a;
+            border-radius: 10px;
+            padding: 3px 20px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        a.addtocart {
+            color: black;
+            background-color: #f08804;
+            text-decoration: none;
+            border: 10px solid #f08804;
+            border-radius: 100px;
+            padding: 3px 60px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
     </style>
 </head>
 
 <body>
     <a class="request" href="Request now">Request now</a>
-    <a class="S" href="sign up">Sign up</a>
+    <a class="signup" href="sign up">Sign up</a>
+    <a class="addtocart" href="addtocart">Add to Cart</a>
 </body>
 
 </html>
