style:add padding

--- a/week2/button.html
+++ b/week2/button.html
@@ -9,7 +9,7 @@
         a.request {
             color: white;
             background-color: black;
-            padding: 20px;
+            padding: 20px 30px;
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
         }
@@ -26,11 +26,31 @@
 
         a.addtocart {
             color: black;
-            background-color: #f08804;
+            background-color: #f9da4e;
             text-decoration: none;
-            border: 10px solid #f08804;
+            border: 2px solid #f9da4e;
             border-radius: 100px;
-            padding: 3px 60px;
+            padding: 10px 60px;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        a.getstarted {
+            color: white;
+            background-color: #7353ad;
+            text-decoration: none;
+            border: 2px solid #7353ad;
+            border-radius: 3px;
+            padding: 10px 30px;
+            font-family: Arial, Helvetica, sans-serif;
+            margin-left: 12px;
+        }
+
+        a.download {
+            color: #7f848b;
+            text-decoration: none;
+            border: 2px solid #7f848b;
+            border-radius: 3px;
+            padding: 10px 30px;
             font-family: Arial, Helvetica, sans-serif;
         }
     </style>
@@ -39,7 +59,14 @@
 <body>
     <a class="request" href="Request now">Request now</a>
     <a class="signup" href="sign up">Sign up</a>
-    <a class="addtocart" href="addtocart">Add to Cart</a>
+    <a class="addtocart" href="addtocart">Add to Cart</a><br><br><br>
+    <a class="getstarted" href="getstarted">Get started</a>
+    <a class="download" href="download">Download</a>
+    <a class="apply" href="applyoncompanywebsite">Apply on company website</a>
+    <a class="save" href="save">save</a>
+
+
+
 </body>
 
 </html>
