fix: style issue fix

--- a/week2/button.html
+++ b/week2/button.html
@@ -9,18 +9,18 @@
         a.request {
             color: white;
             background-color: black;
-            padding: 20px 30px;
+            padding: 15px 30px;
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
+            font-size: smaller;
         }
 
         a.signup {
             color: white;
             background-color: #55a25a;
             text-decoration: none;
-            border: 10px solid #55a25a;
-            border-radius: 10px;
-            padding: 3px 20px;
+            border-radius: 8px;
+            padding: 10px 30px;
             font-family: Arial, Helvetica, sans-serif;
         }
 
@@ -28,7 +28,6 @@
             color: black;
             background-color: #f9da4e;
             text-decoration: none;
-            border: 2px solid #f9da4e;
             border-radius: 100px;
             padding: 10px 60px;
             font-family: Arial, Helvetica, sans-serif;
@@ -38,20 +37,43 @@
             color: white;
             background-color: #7353ad;
             text-decoration: none;
-            border: 2px solid #7353ad;
             border-radius: 3px;
-            padding: 10px 30px;
+            padding: 15px 30px;
             font-family: Arial, Helvetica, sans-serif;
             margin-left: 12px;
+            font-size: smaller;
+            font-weight: bolder;
         }
 
         a.download {
             color: #7f848b;
             text-decoration: none;
-            border: 2px solid #7f848b;
+            border: #7f848b 2px solid;
             border-radius: 3px;
             padding: 10px 30px;
             font-family: Arial, Helvetica, sans-serif;
+            font-size: smaller;
+            font-weight: bolder;
+        }
+
+        a.apply {
+            color: white;
+            background-color: #2d65bc;
+            text-decoration: none;
+            border-radius: 40px;
+            padding: 10px 30px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 15px;
+        }
+
+        a.save {
+            color: #3268c0;
+            text-decoration: none;
+            border: #3268c0 2px solid;
+            border-radius: 40px;
+            padding: 10px 30px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-weight: bolder;
         }
     </style>
 </head>
@@ -59,11 +81,12 @@
 <body>
     <a class="request" href="Request now">Request now</a>
     <a class="signup" href="sign up">Sign up</a>
-    <a class="addtocart" href="addtocart">Add to Cart</a><br><br><br>
+    <a class="addtocart" href="addtocart">Add to Cart</a><br>
+    <br><br>
     <a class="getstarted" href="getstarted">Get started</a>
     <a class="download" href="download">Download</a>
     <a class="apply" href="applyoncompanywebsite">Apply on company website</a>
-    <a class="save" href="save">save</a>
+    <a class="save" href="save">Save</a>
 
 
 
