fix:fix the margin problem

--- a/week2/button.html
+++ b/week2/button.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        a {
+            display: inline-block;
+            margin: 10px 0;
+        }
+
         a.request {
             color: white;
             background-color: black;
@@ -82,7 +87,6 @@
     <a class="request" href="Request now">Request now</a>
     <a class="signup" href="sign up">Sign up</a>
     <a class="addtocart" href="addtocart">Add to Cart</a><br>
-    <br><br>
     <a class="getstarted" href="getstarted">Get started</a>
     <a class="download" href="download">Download</a>
     <a class="apply" href="applyoncompanywebsite">Apply on company website</a>
