style:restyle footer

--- a/week2/button.html
+++ b/week2/button.html
@@ -17,7 +17,7 @@
             padding: 15px 30px;
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: smaller;
+            font-size: 15px;
         }
 
         a.signup {
@@ -27,6 +27,7 @@
             border-radius: 8px;
             padding: 10px 30px;
             font-family: Arial, Helvetica, sans-serif;
+            font-weight: bolder;
         }
 
         a.addtocart {
@@ -36,6 +37,7 @@
             border-radius: 100px;
             padding: 10px 60px;
             font-family: Arial, Helvetica, sans-serif;
+            font-weight: bolder;
         }
 
         a.getstarted {
@@ -43,9 +45,9 @@
             background-color: #7353ad;
             text-decoration: none;
             border-radius: 3px;
-            padding: 15px 30px;
+            padding: 12px 25px;
             font-family: Arial, Helvetica, sans-serif;
-            margin-left: 12px;
+            margin-left: 20px;
             font-size: smaller;
             font-weight: bolder;
         }
@@ -59,6 +61,8 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: smaller;
             font-weight: bolder;
+            margin right: ;
+            : 10px;
         }
 
         a.apply {
@@ -68,7 +72,7 @@
             border-radius: 40px;
             padding: 10px 30px;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: 15px;
+            font-size: 17px;
         }
 
         a.save {
