style: change the marginand font size

--- a/week2/button.html
+++ b/week2/button.html
@@ -8,7 +8,7 @@
     <style>
         a {
             display: inline-block;
-            margin: 10px 0;
+            margin: 5px;
         }
 
         a.request {
