--- a/week2/button.html
+++ b/week2/button.html
@@ -61,8 +61,7 @@
             font-family: Arial, Helvetica, sans-serif;
             font-size: smaller;
             font-weight: bolder;
-            margin right: ;
-            : 10px;
+            margin-right: 10px;
         }
 
         a.apply {
