style:add color and font family

--- a/week2/self-intro.html
+++ b/week2/self-intro.html
@@ -17,6 +17,10 @@
             padding: 10px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+
+        p {
+            color: #05339C;
+        }
     </style>
 
 </head>
@@ -29,8 +33,10 @@
         creating art or spending quiet time alone.</p>
     <p>I believe that life should be balanced between work, rest, and doing things that make you smile. My favorite way
         to relax is to listen to music, draw something new, and enjoy a slice of pizza.</p>
-    <img src="image/p1.jpg" alt="My Picture" width="300" height="400">
-    <a href=""></a>
+    <img src="image/p1.jpg" alt="My Picture" width="300" height="400"><br>
+    <a href="https://www.instagram.com/x15vmtn71?igsh=eXl4cjR5cHY5bHo4&utm_source=qr">Instagram</a>
+    <a href="https://www.facebook.com/profile.php?id=100081667842649&mibextid=LQQJ4d">Facebook</a>
+
 </body>
 
 </html>
