style:add body color

--- a/week2/self-intro.html
+++ b/week2/self-intro.html
@@ -21,6 +21,10 @@
         p {
             color: #05339C;
         }
+
+        body {
+            background-color: #fdfdff;
+        }
     </style>
 
 </head>
