--- a/week2/artist.html
+++ b/week2/artist.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
 </head>
 
 <body>
     <h1>Lee Hom Wang</h1>
-    <img src="image/leehom (1).jpg" alt="Lee Hom" width="300" height="400">
-    <img src="image/leehom (2).jpg" alt="Lee Hom" width="200" height="400">
-    <img src="image/leehom (3).jpg" alt="leehom" width="280" height="400">
+    <img src="image/leehom (1).jpg" alt="Lee Hom" width="220" height="300">
+    <img src="image/leehom (2).jpg" alt="Lee Hom" width="150" height="300">
+    <img src="image/leehom (3).jpg" alt="leehom" width="200" height="300">
     <p>Leehom Wang, born on May 17, 1976, in Rochester, New York, is a highly acclaimed Taiwanese-American singer,
         songwriter, actor, and producer. Known for his exceptional musical talent, he skillfully blends pop, R&B,
         hip-hop, and traditional Chinese elements in his songs. Often regarded as one of the most influential figures in
@@ -19,7 +20,17 @@
     <p>Beyond his singing career, he has also acted in several films and composed soundtracks that showcase his musical
         versatility. His passion for promoting Chinese culture through modern music has earned him worldwide recognition
         and lasting admiration.</p>
-    <a href="https://www.instagram.com/wangleehom/?hl=en" target="_blank">Instagram</a>
+    <ul>Artist Works
+        <li>Wrong Love</li>
+        <li>Falling Leaf Returns to Root</li>
+        <li>Forever Love</li>
+        <li>All the Things You Never Knew</li>
+    </ul>
+    <a href="https://www.instagram.com/wangleehom/?hl=en" target="_blank">Instagram</a><br>
+
+    <a class="official website"
+        href="https://wangleehom.com/?fbclid=PAZXh0bgNhZW0CMTEAAad4pq5nsS7EF6Lhq6AT-6mA6caBZXu-E1QV3gZep2iVmh4ONVcdQbFq18Kggw_aem_DxPI76KnVIWOcSn2Lz70XQ">Official
+        Website</a>
 
 
 </body>
