fix: spelling mistake

--- a/week2/artist.html
+++ b/week2/artist.html
@@ -73,7 +73,7 @@
         career, he has also acted in several films and composed soundtracks. His passion for promoting Chinese culture
         through modern music has earned him worldwide recognition and lasting admiration.</p>
 
-    <ul>Artist Works
+    <ul>Songs by Leehom Wang
         <li>Wrong Love</li>
         <li>Falling Leaf Returns to Root</li>
         <li>Forever Love</li>
