--- a/week2/self-intro.html
+++ b/week2/self-intro.html
@@ -6,25 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        h1 {
-            color: rgb(5, 5, 107);
-            font-size: 35px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        h3 {
-            border: 1px dashed black;
-            padding: 10px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        p {
-            color: #05339C;
-        }
-
         body {
-            background-color: #fdfdff;
-        }
+            color: #E7F2EF;
+
+            h1 {
+                color: #4A628A;
+                font-size: 35px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+
+            h3 {
+                color: #7AB2D3;
+                border: 1px dashed #7AB2D3;
+                padding: 10px;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            }
+
+            p {
+                color: #4A628A
+            }
+
+            body {
+                background-color: #fdfdff;
+            }
     </style>
 
 </head>
@@ -38,8 +42,10 @@
     <p>I believe that life should be balanced between work, rest, and doing things that make you smile. My favorite way
         to relax is to listen to music, draw something new, and enjoy a slice of pizza.</p>
     <img src="image/p1.jpg" alt="My Picture" width="300" height="400"><br>
-    <a href="https://www.instagram.com/x15vmtn71?igsh=eXl4cjR5cHY5bHo4&utm_source=qr">Instagram</a>
-    <a href="https://www.facebook.com/profile.php?id=100081667842649&mibextid=LQQJ4d">Facebook</a>
+    <a href="https://www.instagram.com/x15vmtn71?igsh=eXl4cjR5cHY5bHo4&utm_source=qr" target="_blank">
+        <img src="image/instagram.png" alt="Instagram" width="50px" height="50px"></a>
+    <a href="https://www.facebook.com/profile.php?id=100081667842649&mibextid=LQQJ4d" target="_blank">
+        <img src="image/facebook.png" alt="Facebook" width="50px" height="50px"></a>
 
 </body>
 
