--- a/week2/artist.html
+++ b/week2/artist.html
@@ -40,14 +40,7 @@
             margin: 5px;
         }
 
-        a.official {
-            color: white;
-            background-color: #A1C2BD;
-            text-decoration: none;
-            border-radius: 10px;
-            padding: 10px 30px;
-            font-weight: bolder;
-        }
+
 
         a.instagram {
             color: white;
@@ -57,6 +50,16 @@
             padding: 10px 30px;
 
             font-weight: bolder;
+        }
+
+        button {
+            color: #ffffff;
+            background-color: #A1C2BD;
+            border: #A1C2BD 2px solid;
+            padding: 10px 30px;
+            border-radius: 10px;
+            font-weight: bolder;
+            font-family: Georgia, 'Times New Roman', Times, serif;
         }
     </style>
 </head>
@@ -81,10 +84,8 @@
     </ul>
     <a class="instagram" href="https://www.instagram.com/wangleehom/?hl=en" target="_blank">Instagram</a><br>
 
-    <a class="official website"
-        href="https://wangleehom.com/?fbclid=PAZXh0bgNhZW0CMTEAAad4pq5nsS7EF6Lhq6AT-6mA6caBZXu-E1QV3gZep2iVmh4ONVcdQbFq18Kggw_aem_DxPI76KnVIWOcSn2Lz70XQ">Official
-        Website</a>
-
+    <a href="https://wangleehom.com/?fbclid=PAZXh0bgNhZW0CMTEAAad4pq5nsS7EF6Lhq6AT-6mA6caBZXu-E1QV3gZep2iVmh4ONVcdQbFq18Kggw_aem_DxPI76KnVIWOcSn2Lz70XQ"
+        target="_blank"><button>Official Website</button></a>
 
 </body>
 
