style:change background color

--- a/week2/self-intro.html
+++ b/week2/self-intro.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        body {
-            color: #E7F2EF;
-        }
-
         h1 {
             color: #4A628A;
             font-size: 35px;
@@ -28,7 +24,7 @@
         }
 
         body {
-            background-color: #fdfdff;
+            background-color: #f9ffff;
         }
     </style>
 
