--- a/week2/artist.html
+++ b/week2/artist.html
@@ -7,24 +7,28 @@
     <title>Document</title>
     <style>
         body {
-            color: #E7F2EF;
+            background-color: #f0ffff;
+        }
+
+        img {
+            border-radius: 10px;
         }
 
         h1 {
             color: white;
-            background-color: #708993;
+            background-color: #62908f;
             padding: 10px;
             border-radius: 10px;
         }
 
         p {
-            color: #708993;
+            color: #62908f;
             font-size: 18px;
 
         }
 
         ul {
-            color: #A1C2BD;
+            color: #74a69f;
             border: #708993 2px dashed;
             padding: 15px 30px;
             border-radius: 10px;
@@ -35,7 +39,6 @@
         }
 
         a {
-            color: #708993;
             display: inline-block;
             margin: 5px;
         }
@@ -44,7 +47,7 @@
 
         a.instagram {
             color: white;
-            background-color: #A1C2BD;
+            background-color: #74a69f;
             text-decoration: none;
             border-radius: 10px;
             padding: 10px 30px;
@@ -54,8 +57,8 @@
 
         button {
             color: #ffffff;
-            background-color: #A1C2BD;
-            border: #A1C2BD 2px solid;
+            background-color: #74a69f;
+            border: #74a69f 2px solid;
             padding: 10px 30px;
             border-radius: 10px;
             font-weight: bolder;
