style:change font color

--- a/week2/self-intro.html
+++ b/week2/self-intro.html
@@ -14,7 +14,7 @@
 
         h3 {
             color: #7AB2D3;
-            border: 1px dashed #7AB2D3;
+            border: 1px dashed #4A628A;
             padding: 10px;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
