--- a/week2/button.html
+++ b/week2/button.html
@@ -8,13 +8,13 @@
     <style>
         a {
             display: inline-block;
-            margin: 5px;
+            margin: 4px;
         }
 
         a.request {
             color: white;
             background-color: black;
-            padding: 15px 30px;
+            padding: 13px 30px;
             text-decoration: none;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 15px;
@@ -25,7 +25,7 @@
             background-color: #55a25a;
             text-decoration: none;
             border-radius: 8px;
-            padding: 10px 30px;
+            padding: 10px 35px;
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bolder;
         }
@@ -35,7 +35,7 @@
             background-color: #f9da4e;
             text-decoration: none;
             border-radius: 100px;
-            padding: 10px 60px;
+            padding: 10px 65px;
             font-family: Arial, Helvetica, sans-serif;
             font-weight: bolder;
         }
@@ -45,10 +45,10 @@
             background-color: #7353ad;
             text-decoration: none;
             border-radius: 3px;
-            padding: 12px 25px;
+            padding: 12px 30px;
             font-family: Arial, Helvetica, sans-serif;
             margin-left: 20px;
-            font-size: smaller;
+            font-size: 14px;
             font-weight: bolder;
         }
 
@@ -59,7 +59,7 @@
             border-radius: 3px;
             padding: 10px 30px;
             font-family: Arial, Helvetica, sans-serif;
-            font-size: smaller;
+            font-size: 15px;
             font-weight: bolder;
             margin-right: 10px;
         }
@@ -69,7 +69,7 @@
             background-color: #2d65bc;
             text-decoration: none;
             border-radius: 40px;
-            padding: 10px 30px;
+            padding: 10px 35px;
             font-family: Arial, Helvetica, sans-serif;
             font-size: 17px;
         }
